src/test/deca/syntax/invalid/commentaire_simple_deux_lignes.deca
// Résultat : Erreur en ligne 3
// Je fais un commentaire sur une ligne et pourtant
je continue ce commentaire après

{
    println("Encore un string");
}